# whatsapp_handler

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: config.rs  lib.rs
src/action/: incoming.rs  outgoing.rs
src/formatter/: incoming_type.rs  mod.rs  outgoing_type.rs
