[package]
name = "whatsapp_handler"
version = "0.2.0"
edition = "2024"
authors = ["bambby <https://www.linkedin.com/in/bambby-plus/>"]
description = "A comprehensive Rust library for WhatsApp Cloud API integration, enabling seamless processing of webhook messages and sending of diverse message types, such as documents, images, videos, and interactive messages."
license = "MIT"
repository = "https://github.com/bambby-plus/whatsapp-handler.git"
# homepage = "https://github.com/bambby-plus/whatsapp-handler.git"
documentation = "https://docs.rs/whatsapp-handler"
readme = "README.md"
keywords = ["whatsapp", "cloud", "webhook", "handler", "messaging"]
categories = ["api-bindings", "parsing"]

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
